{
    "name": "pauseMenu",
    "maps": [
        {
            "name": "input",
            "id": "d498addc-ce66-4490-9abc-c6b3bfb3c418",
            "actions": [
                {
                    "name": "call",
                    "type": "Button",
                    "id": "80653158-43f7-41cd-81a8-1b697db25e01",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveDown",
                    "type": "Button",
                    "id": "9e73fd6e-9170-43fd-be77-684777b6c717",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "moveUp",
                    "type": "Button",
                    "id": "5d947b97-d84e-4788-8b5b-ce1e589a5446",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "select",
                    "type": "Button",
                    "id": "55e12998-448c-47c6-91e9-7474debb7265",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ec5bc8d2-e934-4d20-b61f-87bee7579a7b",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "call",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c44c3e81-c66c-4ebb-ac04-c5e6cefe523d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "call",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a6c10a06-1f1f-46b6-968b-75166d5a48c9",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "moveDown",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8fb119d8-0421-4606-ab42-9a41cf013b2e",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "moveUp",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e019787-05b6-4f53-aaa2-8314b5b22849",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "New control scheme",
                    "action": "select",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "New control scheme",
            "bindingGroup": "New control scheme",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}